UserListDisplay scrollbar style fixed

--- a/client/src/components/AppLayout/UserListDisplay/UserListDisplay.scss
+++ b/client/src/components/AppLayout/UserListDisplay/UserListDisplay.scss
@@ -2,6 +2,22 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  display: border-box;
   background-color: #23241f;
-  border: 1px solid #1c1d19;
+  border: 2px solid #1c1d19;
+  height: 100px;
+  overflow: auto;
+}
+.userList::-webkit-scrollbar {
+  background-color: #aaa;
+  width: 10px;
+}
+.userList::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+.userList::-webkit-scrollbar-thumb {
+  background-color: #888;
+}
+.userList::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
 }
